[package]
name = "hector-build"
version = "0.1.1"
edition = "2024"
description = "Build-script helper for hector: walks your source tree and produces a compile-time tar.gz archive"
license = "AGPL-3.0-only"
repository = "https://github.com/neiam/hector"
readme = "README.md"
keywords = ["build-script", "axum", "source", "introspection", "embed"]
categories = ["development-tools", "web-programming::http-server"]

[dependencies]
walkdir = "2"
flate2 = "1"
tar = "0.4"
